# offline-code-reivew-agent

./: .dockerignore  .gitignore  Dockerfile  Modelfile  docker-compose.poc.yml  docker-compose.yml  pyproject.toml
plans/: PLAN-002_gitlab-integration-hardening.md
results/: benchmark_cloud.json  benchmark_cloud_full.json  benchmark_codegemma_7b-instruct.json  benchmark_codegemma_7b-instruct_full.json  benchmark_codestral_22b.json  benchmark_codestral_22b_full.json  benchmark_granite-code_8b.json  benchmark_granite-code_8b_full.json  benchmark_report.md  benchmark_starcoder2_15b.json  benchmark_starcoder2_15b_full.json
scripts/: benchmark_cloud_full.py  benchmark_models.py  benchmark_offline_full.py  benchmark_runner.sh  compare_ecommerce.py  compare_fewshot.py  compare_rounds.py  generate_report.py  ingest.py  init_cve_db.sql  init_db.py  init_review_history_db.sql  integration_test.sh  load_cve_data.py  mock_gitlab.py  poc_test.sh  simulate_review.py
src/: cloud_reviewer.py  config.py  context_enricher.py  cve_formatter.py  cve_scanner.py  dependency_parser.py  diff_parser.py  embedding.py  gitlab_client.py  logging_config.py  metrics_collector.py  prompt.py  retriever.py  retry.py  review_history.py  review_validator.py  reviewer.py  server.py  vectorstore.py
tests/: test_context_enricher.py  test_cve_scanner.py  test_dependency_parser.py  test_diff_parser.py  test_e2e.py  test_embedding.py  test_gitlab_client.py  test_prompt.py  test_retriever.py  test_retry.py  test_review_history.py  test_review_validator.py  test_reviewer.py  test_server.py  (+1 more)
(+9 files in other folders)
