[project]
name = "offline-code-review-agent"
version = "0.1.0"
description = "폐쇄망 AI 코드 리뷰 봇 - Ollama + pgvector 기반"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
